@@ -4,122 +4,118 @@
 #--------------------------------------------------
 # TEZ DAG plan: pig-0_scope-0
 #--------------------------------------------------
-Tez vertex scope-48	->	Tez vertex scope-50,Tez vertex scope-53,
-Tez vertex scope-53	->	Tez vertex scope-56,Tez vertex scope-58,
-Tez vertex scope-50	->	Tez vertex scope-52,
-Tez vertex scope-52	->	Tez vertex scope-56,Tez vertex scope-58,
-Tez vertex scope-56
+Tez vertex scope-50	->	Tez vertex scope-52,Tez vertex scope-55,
+Tez vertex scope-55	->	Tez vertex scope-58,Tez vertex scope-60,
+Tez vertex scope-52	->	Tez vertex scope-54,
+Tez vertex scope-54	->	Tez vertex scope-58,Tez vertex scope-60,
 Tez vertex scope-58
+Tez vertex scope-60
 
-Tez vertex scope-48
-# Plan on vertex
-POValueOutputTez - scope-49	->	 [scope-50, scope-53]
-|
-|---a: New For Each(false,false)[bag] - scope-7
-    |   |
-    |   Cast[int] - scope-2
-    |   |
-    |   |---Project[bytearray][0] - scope-1
-    |   |
-    |   Cast[int] - scope-5
-    |   |
-    |   |---Project[bytearray][1] - scope-4
-    |
-    |---a: Load(file:///tmp/input:org.apache.pig.builtin.PigStorage) - scope-0
-Tez vertex scope-53
-# Plan on vertex
-POValueOutputTez - scope-55	->	 [scope-56, scope-58]
-|
-|---POValueInputTez - scope-54	<-	 scope-48
 Tez vertex scope-50
 # Plan on vertex
-b: Local Rearrange[tuple]{int}(false) - scope-72	->	 scope-52
-|   |
-|   Project[int][0] - scope-74
+POValueOutputTez - scope-51	->	 [scope-52, scope-55]
 |
-|---c: New For Each(false,false)[bag] - scope-61
+|---a: New For Each(false,false)[bag] - scope-11
     |   |
-    |   Project[int][0] - scope-62
+    |   Cast[int] - scope-6
     |   |
-    |   POUserFunc(org.apache.pig.builtin.COUNT$Initial)[tuple] - scope-63
+    |   |---Project[bytearray][0] - scope-5
     |   |
-    |   |---Project[bag][1] - scope-64
+    |   Cast[int] - scope-9
+    |   |
+    |   |---Project[bytearray][1] - scope-8
     |
-    |---Pre Combiner Local Rearrange[tuple]{Unknown} - scope-75
-        |
-        |---POValueInputTez - scope-51	<-	 scope-48
+    |---a: Load(file:///tmp/input:org.apache.pig.builtin.PigStorage) - scope-4
+Tez vertex scope-55
+# Plan on vertex
+POValueOutputTez - scope-57	->	 [scope-58, scope-60]
+|
+|---POValueInputTez - scope-56	<-	 scope-50
 Tez vertex scope-52
-# Combine plan on edge <scope-50>
-b: Local Rearrange[tuple]{int}(false) - scope-76	->	 scope-52
+# Plan on vertex
+b: Local Rearrange[tuple]{int}(false) - scope-74	->	 scope-54
 |   |
-|   Project[int][0] - scope-78
+|   Project[int][0] - scope-76
 |
-|---c: New For Each(false,false)[bag] - scope-65
+|---c: New For Each(false,false)[bag] - scope-63
     |   |
-    |   Project[int][0] - scope-66
+    |   Project[int][0] - scope-64
     |   |
-    |   POUserFunc(org.apache.pig.builtin.COUNT$Intermediate)[tuple] - scope-67
+    |   POUserFunc(org.apache.pig.builtin.COUNT$Initial)[tuple] - scope-65
     |   |
-    |   |---Project[bag][1] - scope-68
+    |   |---Project[bag][1] - scope-66
     |
-    |---b: Package(CombinerPackager)[tuple]{int} - scope-71
+    |---Pre Combiner Local Rearrange[tuple]{Unknown} - scope-77
+        |
+        |---POValueInputTez - scope-53	<-	 scope-50
+Tez vertex scope-54
+# Combine plan on edge <scope-52>
+b: Local Rearrange[tuple]{int}(false) - scope-78	->	 scope-54
+|   |
+|   Project[int][0] - scope-80
+|
+|---c: New For Each(false,false)[bag] - scope-67
+    |   |
+    |   Project[int][0] - scope-68
+    |   |
+    |   POUserFunc(org.apache.pig.builtin.COUNT$Intermediate)[tuple] - scope-69
+    |   |
+    |   |---Project[bag][1] - scope-70
+    |
+    |---b: Package(CombinerPackager)[tuple]{int} - scope-73
 # Plan on vertex
-POValueOutputTez - scope-60	->	 [scope-56, scope-58]
+POValueOutputTez - scope-62	->	 [scope-58, scope-60]
 |
-|---c: New For Each(false,false)[bag] - scope-23
+|---c: New For Each(false,false)[bag] - scope-27
     |   |
-    |   Project[int][0] - scope-18
+    |   Project[int][0] - scope-22
     |   |
-    |   POUserFunc(org.apache.pig.builtin.COUNT$Final)[long] - scope-21
+    |   POUserFunc(org.apache.pig.builtin.COUNT$Final)[long] - scope-25
     |   |
-    |   |---Project[bag][1] - scope-69
+    |   |---Project[bag][1] - scope-71
     |
-    |---b: Package(CombinerPackager)[tuple]{int} - scope-15
-Tez vertex scope-56
-# Plan on vertex
-d: Store(file:///tmp/pigoutput1:org.apache.pig.builtin.PigStorage) - scope-35
-|
-|---d: Filter[bag] - scope-25
-    |   |
-    |   Less Than[boolean] - scope-34
-    |   |
-    |   |---Multiply[long] - scope-31
-    |   |   |
-    |   |   |---Cast[long] - scope-27
-    |   |   |   |
-    |   |   |   |---Constant(2) - scope-26
-    |   |   |
-    |   |   |---POUserFunc(org.apache.pig.backend.hadoop.executionengine.tez.plan.udf.ReadScalarsTez)[long] - scope-30
-    |   |       |
-    |   |       |---Constant(1) - scope-28
-    |   |
-    |   |---Cast[long] - scope-33
-    |       |
-    |       |---Project[int][1] - scope-32
-    |
-    |---POValueInputTez - scope-57	<-	 scope-53
+    |---b: Package(CombinerPackager)[tuple]{int} - scope-19
 Tez vertex scope-58
 # Plan on vertex
-e: Store(file:///tmp/pigoutput2:org.apache.pig.builtin.PigStorage) - scope-47
+d: Store(file:///tmp/pigoutput1:org.apache.pig.builtin.PigStorage) - scope-38
 |
-|---e: Filter[bag] - scope-36
+|---d: Filter[bag] - scope-29
     |   |
-    |   Not[boolean] - scope-46
+    |   Less Than[boolean] - scope-37
     |   |
-    |   |---Less Than[boolean] - scope-45
+    |   |---Multiply[long] - scope-34
+    |   |   |
+    |   |   |---Constant(2) - scope-30
+    |   |   |
+    |   |   |---POUserFunc(org.apache.pig.backend.hadoop.executionengine.tez.plan.udf.ReadScalarsTez)[long] - scope-33
+    |   |       |
+    |   |       |---Constant(1) - scope-31
+    |   |
+    |   |---Cast[long] - scope-36
     |       |
-    |       |---Multiply[long] - scope-42
-    |       |   |
-    |       |   |---Cast[long] - scope-38
-    |       |   |   |
-    |       |   |   |---Constant(2) - scope-37
-    |       |   |
-    |       |   |---POUserFunc(org.apache.pig.backend.hadoop.executionengine.tez.plan.udf.ReadScalarsTez)[long] - scope-41
-    |       |       |
-    |       |       |---Constant(1) - scope-39
-    |       |
-    |       |---Cast[long] - scope-44
-    |           |
-    |           |---Project[int][1] - scope-43
+    |       |---Project[int][1] - scope-35
     |
-    |---POValueInputTez - scope-59	<-	 scope-53
+    |---POValueInputTez - scope-59	<-	 scope-55
+Tez vertex scope-60
+# Plan on vertex
+e: Store(file:///tmp/pigoutput2:org.apache.pig.builtin.PigStorage) - scope-49
+|
+|---e: Filter[bag] - scope-39
+    |   |
+    |   Not[boolean] - scope-48
+    |   |
+    |   |---Less Than[boolean] - scope-47
+    |       |
+    |       |---Multiply[long] - scope-44
+    |       |   |
+    |       |   |---Constant(2) - scope-40
+    |       |   |
+    |       |   |---POUserFunc(org.apache.pig.backend.hadoop.executionengine.tez.plan.udf.ReadScalarsTez)[long] - scope-43
+    |       |       |
+    |       |       |---Constant(1) - scope-41
+    |       |
+    |       |---Cast[long] - scope-46
+    |           |
+    |           |---Project[int][1] - scope-45
+    |
+    |---POValueInputTez - scope-61	<-	 scope-55
